--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Networking and Measurement Conference Deadlines
-description: Countdowns to top Networking and Measurement conference deadlines.
+title: Computer Networking Conference Deadlines
+description: Countdowns to Networking conference deadlines.
 author: Andrew Chu
 
 domain: ""
